@startuml
title 组合模式重构 — 修改前类图 (简化)

class ObjectManager {
  - List<Bullet> bullets
  - List<Collectable> collectables
  + updateFightScene()
  + renderFightScene()
}

class BulletRenderer {
  + renderAll(List<Bullet>)
}

class CollectableRenderer {
  + renderAll(List<Collectable>)
}

class Bullet {
  + update()
  + getTexture()
}

class Collectable {
  + update()
  + getTexture()
}

ObjectManager --> BulletRenderer : uses
ObjectManager --> CollectableRenderer : uses
ObjectManager --> Bullet : contains >
ObjectManager --> Collectable : contains >

BulletRenderer --> Bullet : read
CollectableRenderer --> Collectable : read

note right of ObjectManager
  - 多处活动列表
  - 渲染职责集中
  - 测试与可扩展性受限
end note

@enduml